--- a/MeetingCalendar/Main.storyboard
+++ b/MeetingCalendar/Main.storyboard
@@ -15,7 +15,7 @@
         <!--ListView-->
         <scene sceneID="0fd-Pa-ofA">
             <objects>
-                <viewController id="iZ5-qM-0hh" userLabel="ListView" sceneMemberID="viewController">
+                <viewController id="iZ5-qM-0hh" userLabel="ListView" customClass="ViewController" customModule="MeetingCalendar" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="MzQ-l1-0PP">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -156,6 +156,10 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="iZ5-qM-0hh" id="evt-Za-5Eh"/>
+                                    <outlet property="delegate" destination="iZ5-qM-0hh" id="4ug-9X-taP"/>
+                                </connections>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
